--- a/polyhedron.ipynb
+++ b/polyhedron.ipynb
@@ -2,52 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using BenchmarkTools\n",
-    "using Revise\n",
-    "\n",
-    "using LinearAlgebra\n",
-    "using DataFrames\n",
-    "\n",
-    "using FileIO\n",
-    "using JLD2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using Plots\n",
-    "# gr()\n",
-    "# pgfplotsx()\n",
-    "pyplot(fmt=:svg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/masanorikanamaru/Documents/GitHub/Astroshaper/src\n"
-     ]
+     "data": {
+      "text/plain": [
+       "v\"1.8.4\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "run(`pwd`);"
+    "VERSION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"/Users/masanorikanamaru/Documents/GitHub/Astroshaper\""
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using BenchmarkTools\n",
+    "# using Revise\n",
+    "\n",
+    "# using LinearAlgebra\n",
+    "# using DataFrames\n",
+    "\n",
+    "# using FileIO\n",
+    "# using JLD2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,20 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Precompiling HalfEdges [b1055ec2-7fd2-11e8-0664-e1e21354bdb9]\n",
-      "└ @ Base loading.jl:1317\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "includet(\"polyhedron.jl\");"
+    "# includet(\"polyhedron.jl\");"
    ]
   },
   {
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -118,44 +120,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"/Users/masanorikanamaru/Documents/shape/itokawa/itokawa_v2718_f5430.obj\""
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# shapepath = \"/Users/masanorikanamaru/Documents/shape/itokawa/itokawa_v25350_f49152.obj\"\n",
-    "shapepath = \"/Users/masanorikanamaru/Documents/shape/itokawa/itokawa_v2718_f5430.obj\""
+    "# shapepath = \"/Users/masanorikanamaru/Documents/shape/itokawa/itokawa_v2718_f5430.obj\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: loadmesh not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: loadmesh not defined",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[5]:1",
-      " [2] eval",
-      "   @ ./boot.jl:373 [inlined]",
-      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1196"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**** Load /Users/masanorikanamaru/Documents/shape/ryugu/ryugu_test.obj ****\n",
+      "Vertices : 2976\n",
+      "Faces    : 5932\n",
+      "Edges    : 8898\n"
      ]
     }
    ],
@@ -171,14 +156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 26.757689 seconds (1.42 G allocations: 35.706 GiB, 10.28% gc time)\n"
+      " 43.213379 seconds (1.70 G allocations: 42.759 GiB, 9.17% gc time, 1.42% compilation time)\n"
      ]
     }
    ],
@@ -191,51 +176,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "30.582577 seconds (1.42 G allocations: 35.706 GiB, 19.34% gc time)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5430-element Vector{Float64}:\n",
-       " -0.010895647201850035\n",
-       " -0.01090430957210558\n",
-       " -0.010720331144283064\n",
-       " -0.01116604636565566\n",
-       " -0.011089087341142837\n",
-       " -0.010809653284468684\n",
-       " -0.01058416660390794\n",
-       " -0.01086947554649759\n",
-       " -0.011231025378015593\n",
-       " -0.011422323106278215\n",
-       " -0.01131260690873072\n",
-       " -0.01097596192612083\n",
-       " -0.01112558228030315\n",
+       "5932-element Vector{Float64}:\n",
+       " -0.11022843455631387\n",
+       " -0.11055700300154159\n",
+       " -0.11084976876451896\n",
+       " -0.10886417633894291\n",
+       " -0.11046501569202959\n",
+       " -0.11156486813369212\n",
+       " -0.11205158106710629\n",
+       " -0.10974989067619115\n",
+       " -0.10862757598265667\n",
+       " -0.10829975843514782\n",
+       " -0.10995722367616974\n",
+       " -0.11145116005965305\n",
+       " -0.11195040954858723\n",
        "  ⋮\n",
-       " -0.01217561188407867\n",
-       " -0.012146829456854599\n",
-       " -0.01221956199638723\n",
-       " -0.01229236472277908\n",
-       " -0.012206386087450274\n",
-       " -0.01212151703939945\n",
-       " -0.012368395220410038\n",
-       " -0.012476424305230598\n",
-       " -0.012172107772857878\n",
-       " -0.012079469029664535\n",
-       " -0.014594237016997882\n",
-       " -0.013738914536698236"
+       " -0.10842236641164982\n",
+       " -0.1056540552555635\n",
+       " -0.11244603244865889\n",
+       " -0.11353109698471886\n",
+       " -0.10496993229615241\n",
+       " -0.10651132792013278\n",
+       " -0.11104735671337346\n",
+       " -0.11156906236953418\n",
+       " -0.10874423182908297\n",
+       " -0.11019719939169027\n",
+       " -0.10764355481869335\n",
+       " -0.10710614210771394"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,42 +222,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5430-element Vector{SVector{3, Float64}}:\n",
-       " [2.577947188714996e-5, 5.197679040914658e-5, -2.7009830378709968e-5]\n",
-       " [2.2030189615376065e-5, 5.0466653018200496e-5, -3.126697808963081e-5]\n",
-       " [2.963809379454974e-5, 5.066757929912562e-5, -2.52953062631447e-5]\n",
-       " [2.6921381371466124e-5, 5.517698515492022e-5, -2.2916143872226028e-5]\n",
-       " [1.9201021861450067e-5, 5.067115928466656e-5, -3.330778021697846e-5]\n",
-       " [2.0345351977785303e-5, 4.6597310720904235e-5, -3.66498201457048e-5]\n",
-       " [3.089272567932374e-5, 4.80744938467499e-5, -2.850194642724388e-5]\n",
-       " [3.390654929627958e-5, 5.188314158427497e-5, -1.854416356299805e-5]\n",
-       " [3.0593380416892374e-5, 5.577723922413485e-5, -1.8915636985183883e-5]\n",
-       " [2.347986178494391e-5, 5.7046970287624094e-5, -2.366760534270383e-5]\n",
-       " [1.794347378985264e-5, 5.279611222496425e-5, -3.191071894985246e-5]\n",
-       " [1.731664797682609e-5, 4.645718763053634e-5, -3.832942047275329e-5]\n",
-       " [1.397995415755572e-5, 4.4616667037596166e-5, -4.1279606911603434e-5]\n",
+       "5932-element Vector{StaticArraysCore.SVector{3, Float64}}:\n",
+       " [-9.325690046041817e-5, 0.00012351636053792872, -0.00018628783793681958]\n",
+       " [-9.801849864012092e-5, 0.00012818416323230592, -0.00018140365697357673]\n",
+       " [-9.528238418369941e-5, 0.00011242476848005237, -0.00019255534867114937]\n",
+       " [-8.139553237168295e-5, 0.00012848030518850198, -0.00018682947177048936]\n",
+       " [-0.00010180578933754875, 0.00013366858905758925, -0.00017537171903161695]\n",
+       " [-0.00010487487189126445, 0.0001222929513797361, -0.00018300187527416455]\n",
+       " [-0.00010174762797681023, 0.00010679692684477863, -0.00019403826770763154]\n",
+       " [-8.933590711930843e-5, 0.00010766821024380583, -0.00019616864079672632]\n",
+       " [-7.293032090525832e-5, 0.00012398270154360494, -0.00019309371079810495]\n",
+       " [-7.382181715011198e-5, 0.00013851522679124027, -0.0001821742677347855]\n",
+       " [-9.791959606457482e-5, 0.00014236247221405425, -0.00017000474677449838]\n",
+       " [-0.00011046427479724392, 0.00012950639732109645, -0.00017464644708490852]\n",
+       " [-0.00011071054029059781, 0.00012297793581653985, -0.00017972406613649017]\n",
        " ⋮\n",
-       " [-7.337970664555594e-5, -7.819836027965495e-6, 2.2939646295482953e-5]\n",
-       " [-7.355124603602216e-5, -3.9403349247646914e-6, 2.2867331476553996e-5]\n",
-       " [-7.356044760745697e-5, -1.8825085963655272e-5, 1.647442230736623e-5]\n",
-       " [-7.237791319667254e-5, -2.0801667748117328e-5, 1.9995875212835525e-5]\n",
-       " [-7.238841109647678e-5, -2.2385918895126066e-5, 1.6733638719318857e-5]\n",
-       " [-7.402897405168526e-5, -2.0274763904940758e-5, 1.0266172642142191e-5]\n",
-       " [-6.807612566928046e-5, -2.8984275646649497e-5, 2.442802856882833e-5]\n",
-       " [-6.570586716686411e-5, -3.296470990788531e-5, 2.6568860362538663e-5]\n",
-       " [-7.361784851318704e-5, -1.4510455678785573e-5, 1.895444185156772e-5]\n",
-       " [-7.447484125468e-5, -1.3626210759272798e-5, 1.491489939524575e-5]\n",
-       " [2.229400685040984e-6, 4.9518034009834915e-5, 6.667115570076509e-5]\n",
-       " [-5.235369554278971e-6, 7.841972198913233e-5, -7.805708664792734e-6]"
+       " [8.023077392071774e-5, -0.00013654300006532346, 0.00017890367474651507]\n",
+       " [7.420323100735168e-5, -0.00012052591659298247, 0.0001879479565362595]\n",
+       " [0.0001248971353189448, 4.1152382656164284e-6, -0.00020887892673506202]\n",
+       " [0.00013116188204588788, -2.5725968852198433e-6, -0.00020690245006035717]\n",
+       " [1.5306628606050695e-5, 0.00022261058877543112, 7.103289586040438e-5]\n",
+       " [2.180430690459969e-5, 0.00021989792698248165, 8.303252127905257e-5]\n",
+       " [0.00019595029592662196, 2.1423980693287718e-5, -0.0001427033480029872]\n",
+       " [0.00018996761272199923, 1.3396421451773547e-5, -0.00015219250117916669]\n",
+       " [-0.00019884866906642453, 1.87240631454892e-5, 0.00013252839324382913]\n",
+       " [-0.0001957974659758941, 1.3007982817084944e-5, 0.000141361752417052]\n",
+       " [-0.00014267145389418494, -0.00016018307896287546, 0.00010297361981837354]\n",
+       " [-0.0001502740447638758, -0.00015572078851812008, 9.745989731052988e-5]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,15 +427,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.0",
+   "display_name": "Julia 1.8.1",
    "language": "julia",
-   "name": "julia-1.7"
+   "name": "julia-1.8"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.0"
+   "version": "1.8.4"
   }
  },
  "nbformat": 4,
