use explicit SPICE functions

--- a/TPM_Ryugu/TPM_Ryugu.ipynb
+++ b/TPM_Ryugu/TPM_Ryugu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "195ba72d",
+   "id": "ca784d1e",
    "metadata": {},
    "source": [
     "# Load packages"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ff37fa2",
+   "id": "ac4f3464",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06346c85",
+   "id": "ed612ac8",
    "metadata": {},
    "source": [
     "# Download files"
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bba9b3fe",
+   "id": "b94ca96c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bad4ebf2",
+   "id": "5684b02f",
    "metadata": {},
    "source": [
     "# Load data with SPICE"
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54f28f4b",
+   "id": "cd8496fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,13 +94,15 @@
     "@show save_range[end]\n",
     "@show length(save_range);\n",
     "\n",
-    "sun_ryugu = Astroshaper.spkpos(\"SUN\", et_range, \"RYUGU_FIXED\", \"None\", \"RYUGU\");  # Sun's position in the RYUGU_FIXED frame\n",
-    "RYUGU_TO_J2000 = Astroshaper.pxform(\"RYUGU_FIXED\", \"J2000\", et_range);  # Transformation matrix from RYUGU_FIXED to J2000"
+    "# Sun's position in the RYUGU_FIXED frame\n",
+    "sun_ryugu = [SPICE.spkpos(\"SUN\", et, \"RYUGU_FIXED\", \"None\", \"RYUGU\")[1]*1000 for et in et_range]\n",
+    "# Transformation matrix from RYUGU_FIXED to J2000\n",
+    "RYUGU_TO_J2000 = [SPICE.pxform(\"RYUGU_FIXED\", \"J2000\", et) for et in et_range]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1ce1d78c",
+   "id": "3cbe5935",
    "metadata": {},
    "source": [
     "# Load obj file"
@@ -109,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4bb2b08",
+   "id": "331bb26d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dea0920",
+   "id": "f57ab14b",
    "metadata": {},
    "source": [
     "# TPM"
@@ -132,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "252672de",
+   "id": "6096c38c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8aef87c5",
+   "id": "b8149a33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "416db0e0",
+   "id": "c444fe5d",
    "metadata": {},
    "source": [
     "# Visualize the result"
@@ -179,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f097b484",
+   "id": "11e36966",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f6a0741",
+   "id": "1e1f332a",
    "metadata": {},
    "outputs": [],
    "source": [
