--- a/TPM_Ryugu/TPM_Ryugu.ipynb
+++ b/TPM_Ryugu/TPM_Ryugu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ca784d1e",
+   "id": "8157d126",
    "metadata": {},
    "source": [
     "# Load packages"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac4f3464",
+   "id": "d1818047",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed612ac8",
+   "id": "83e02194",
    "metadata": {},
    "source": [
     "# Download files"
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b94ca96c",
+   "id": "f5e11b9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5684b02f",
+   "id": "d842f109",
    "metadata": {},
    "source": [
     "# Load data with SPICE"
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd8496fb",
+   "id": "fff060bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cbe5935",
+   "id": "08e7be1a",
    "metadata": {},
    "source": [
     "# Load obj file"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "331bb26d",
+   "id": "87fd16cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f57ab14b",
+   "id": "ccd3d10f",
    "metadata": {},
    "source": [
     "# TPM"
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6096c38c",
+   "id": "afb0ab33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,11 +157,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8149a33",
+   "id": "dfc3a9bb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# savepath = \"/Users/masanorikanamaru/Dropbox/Anivid/TPM_Ryugu.jld2\"\n",
+    "# Run TPM and save the result\n",
     "savepath = \"TPM_Ryugu.jld2\"\n",
     "Astroshaper.run_TPM!(shape, et_range, sun_ryugu, thermo_params, savepath, save_range)\n",
     "\n",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c444fe5d",
+   "id": "bdd501bc",
    "metadata": {},
    "source": [
     "# Visualize the result"
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11e36966",
+   "id": "295d21ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e1f332a",
+   "id": "b0ddab26",
    "metadata": {},
    "outputs": [],
    "source": [
