add missing `SPICE.kclear()`

--- a/TPM_Ryugu/TPM_Ryugu.ipynb
+++ b/TPM_Ryugu/TPM_Ryugu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8157d126",
+   "id": "9ecb0b76",
    "metadata": {},
    "source": [
     "# Load packages"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1818047",
+   "id": "153d9e0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83e02194",
+   "id": "1ee114e7",
    "metadata": {},
    "source": [
     "# Download files"
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5e11b9b",
+   "id": "f70cad9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d842f109",
+   "id": "2254bd2f",
    "metadata": {},
    "source": [
     "# Load data with SPICE"
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fff060bc",
+   "id": "e7fc8c55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,12 +97,13 @@
     "# Sun's position in the RYUGU_FIXED frame\n",
     "sun_ryugu = [SPICE.spkpos(\"SUN\", et, \"RYUGU_FIXED\", \"None\", \"RYUGU\")[1]*1000 for et in et_range]\n",
     "# Transformation matrix from RYUGU_FIXED to J2000\n",
-    "RYUGU_TO_J2000 = [SPICE.pxform(\"RYUGU_FIXED\", \"J2000\", et) for et in et_range]"
+    "RYUGU_TO_J2000 = [SPICE.pxform(\"RYUGU_FIXED\", \"J2000\", et) for et in et_range]\n",
+    "SPICE.kclear()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "08e7be1a",
+   "id": "de29e27d",
    "metadata": {},
    "source": [
     "# Load obj file"
@@ -111,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87fd16cd",
+   "id": "0ff34614",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccd3d10f",
+   "id": "db9ab824",
    "metadata": {},
    "source": [
     "# TPM"
@@ -134,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afb0ab33",
+   "id": "7cbe6368",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfc3a9bb",
+   "id": "8b2217a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdd501bc",
+   "id": "44f03531",
    "metadata": {},
    "source": [
     "# Visualize the result"
@@ -181,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "295d21ab",
+   "id": "2973d99f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0ddab26",
+   "id": "bc222fce",
    "metadata": {},
    "outputs": [],
    "source": [
