--- a/TPM_Kanamaru2021/TPM_Kanamaru2021.ipynb
+++ b/TPM_Kanamaru2021/TPM_Kanamaru2021.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"SHAPE_SFM_49k_v20180804.obj\""
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "path_obj = \"SHAPE_SFM_49k_v20180804.obj\"\n",
     "if !isfile(path_obj)\n",
@@ -53,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A preprocessed shape file (SHAPE_SFM_49k_v20180804.jld2) was loaded.\n"
+      "A shape file (SHAPE_SFM_49k_v20180804.obj) was loaded.\n"
      ]
     }
    ],
@@ -90,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +110,7 @@
        "getNetTorque_shadowing"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,17 +209,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -216,7 +219,22 @@
       "--------------------\n",
       "  Orbital elements  \n",
       "--------------------\n",
-      "    Semi-mojor axis         : a  = 1.18956373 [AU]\n",
+      "    Semi-mojor axis         : a  = 1.18956373"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " [AU]\n",
       "    Eccentricity            : e  = 0.19027921 [-]\n",
       "    Lon. of ascending node  : Ω  = 251.589203 [deg]\n",
       "    Argument of periapsis   : ω  = 211.435963 [deg]\n",
@@ -247,14 +265,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": []
      },
-     "execution_count": 78,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -286,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +334,7 @@
        "  0.3083406885385439"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
