--- a/TPM_Kanamaru2021/TPM_Kanamaru2021.ipynb
+++ b/TPM_Kanamaru2021/TPM_Kanamaru2021.ipynb
@@ -10,14 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import Astroshaper\n",
-    "import GLMakie\n",
     "import Downloads\n",
-    "import Statistics\n",
     "using StaticArrays\n",
     "using LinearAlgebra"
    ]
@@ -31,21 +29,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"SHAPE_SFM_49k_v20180804.obj\""
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "To compare with Kanamaru et al. (2021), plase use the public shape models `SHAPE_SFM_49k_v20180804.obj`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "path_obj = \"SHAPE_SFM_49k_v20180804.obj\"\n",
     "if !isfile(path_obj)\n",
@@ -64,25 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A shape file (SHAPE_SFM_49k_v20180804.obj) was loaded.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "path_jld = splitext(path_obj)[1]*\".jld2\"\n",
     "if isfile(path_jld)\n",
-    "    shape = Astroshaper.ShapeModel(path_jld; scale=1000, find_visible_facets=true, save_shape=true)\n",
-    "    println(\"A preprocessed shape file ($path_jld) was loaded.\")\n",
+    "    shape = Astroshaper.ShapeModel(path_jld)\n",
+    "    println(\"A preprocessed shape file was loaded ($path_jld).\")\n",
     "else\n",
     "    shape = Astroshaper.ShapeModel(path_obj; scale=1000, find_visible_facets=true, save_shape=true)\n",
-    "    println(\"A shape file ($path_obj) was loaded.\")\n",
+    "    println(\"An OBJ shape file was loaded ($path_obj).\")\n",
     "end"
    ]
   },
@@ -101,23 +88,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "getNetTorque_shadowing"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
-    "    getSolarIrradiation(distance) -> solar_irrad\n",
+    "    solar_irradiation(distance) -> solar_irrad\n",
     "\n",
     "Calculate the solar irradiation on the body\n",
     "\n",
@@ -127,11 +103,11 @@
     "# Return\n",
     "- `F☉` : solar irradiation [W/m^2]\n",
     "\"\"\"\n",
-    "getSolarIrradiation(rₕ) = Astroshaper.SOLAR_CONST / (rₕ / Astroshaper.AU)^2\n",
+    "solar_irradiation(rₕ) = Astroshaper.SOLAR_CONST / (rₕ / Astroshaper.AU)^2\n",
     "\n",
     "\n",
     "\"\"\"\n",
-    "    getSolarCondition(orbit, spin, time) -> Φ, r_sun\n",
+    "    solar_condition(orbit, spin, time) -> Φ, r_sun\n",
     "\n",
     "Get the solar irradition and the direction of the Sun\n",
     "\n",
@@ -144,10 +120,10 @@
     "- `F☉` : solar irradiation [W/m^2]\n",
     "- `r̂☉` : solar direction in the body-fixed frame\n",
     "\"\"\"\n",
-    "function getSolarCondition(orbit, spin, time)\n",
+    "function solar_condition(orbit, spin, time)\n",
     "    u = Astroshaper.solveKeplerEquation2(orbit, time)\n",
     "    r = Astroshaper.get_r(orbit, u)\n",
-    "    F☉ = getSolarIrradiation(norm(r))\n",
+    "    F☉ = solar_irradiation(norm(r))\n",
     "\n",
     "    r̂☉ = normalize(r) * -1  # Shift the origin from the sun to the body\n",
     "\n",
@@ -159,7 +135,7 @@
     "\n",
     "\n",
     "\"\"\"\n",
-    "    sumTorqueOverSurface_shadowing(shape, F☉, r̂☉) -> τ\n",
+    "    sum_torque_over_surface(shape, F☉, r̂☉) -> τ\n",
     "\n",
     "# Parameters\n",
     "- `shape` : Shape model\n",
@@ -169,7 +145,7 @@
     "# Return\n",
     "- `τ`\n",
     "\"\"\"\n",
-    "function sumTorqueOverSurface_shadowing(shape, F☉, r̂☉)\n",
+    "function sum_torque_over_surface(shape, F☉, r̂☉)\n",
     "    τ = MVector(0., 0., 0.)  # YORP torque\n",
     "\n",
     "    for facet in shape.facets\n",
@@ -188,17 +164,17 @@
     "\n",
     "\n",
     "\"\"\"\n",
-    "    getNetTorque(shape, orbit, spin, times) -> τ̄\n",
+    "    net_torque(shape, orbit, spin, times) -> τ̄\n",
     "\n",
     "Average YORP torque over given time steps\n",
     "\"\"\"\n",
-    "function getNetTorque_shadowing(shape, orbit, spin, times)\n",
+    "function net_torque(shape, orbit, spin, times)\n",
     "    τ̄ = MVector(0., 0., 0.)  # net YORP torque\n",
     "\n",
     "    for time in times\n",
     "        spin_phase = spin.ω * time\n",
-    "        F☉, r̂☉ = getSolarCondition(orbit, spin, time)\n",
-    "        τ = sumTorqueOverSurface_shadowing(shape, F☉, r̂☉)\n",
+    "        F☉, r̂☉ = solar_condition(orbit, spin, time)\n",
+    "        τ = sum_torque_over_surface(shape, F☉, r̂☉)\n",
     "        τ = Astroshaper.body_to_orbit(τ, spin.γ, spin.ε, spin_phase)\n",
     "\n",
     "        τ̄ .+= τ\n",
@@ -209,102 +185,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--------------------\n",
-      "  Orbital elements  \n",
-      "--------------------\n",
-      "    Semi-mojor axis         : a  = 1.18956373"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " [AU]\n",
-      "    Eccentricity            : e  = 0.19027921 [-]\n",
-      "    Lon. of ascending node  : Ω  = 251.589203 [deg]\n",
-      "    Argument of periapsis   : ω  = 211.435963 [deg]\n",
-      "    Inclination             : I  = 5.8840222 [deg]\n",
-      "    Periapsis passage time  : tₚ = -2.49480381575583e6 [sec]\n",
-      "    Mean anomaly            : Φ  = 21.9353799 [deg]\n",
-      "--------------------\n",
-      "  Other parameters  \n",
-      "--------------------\n",
-      "    Gravitational parameter : μ = 1.32712440018e20 [m^3/s^2]\n",
-      "    Mean motion             : n = 0.7596656744674016 [deg/day]\n",
-      "    Orbital period          : P = 473.8926768705121 [day]\n",
-      "------------------\n",
-      "  Time-variables  \n",
-      "------------------\n",
-      "    Time                    : t  = 0.0 [sec]\n",
-      "    Eccentric anomaly       : u  = 26.861352366162944 [deg]\n",
-      "    True anomaly            : ν  = 32.29438904892344 [deg]\n",
-      "    Position                : r  = [1.2489380764712772e11, 7.893747000217802e10, 0.0] [m]\n",
-      "    Velocity                : v  = [-14861.670377358321, 28806.89473107619, 0.0] [m/s]\n",
-      "    Solar irradiation       : F☉ = 1400.4125578742885 [W/m²]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "orbit = Astroshaper.OrbitalElements(Astroshaper.RYUGU)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-------------------\n",
-      "  Spin parameters  \n",
-      "-------------------\n",
-      "Right ascension (RA) : α = 96.4 [deg]\n",
-      "Declination (Dec)    : δ = -66.4 [deg]\n",
-      "Ecliptic longitude   : λ = 179.33757188938182 [deg]\n",
-      "Ecliptic latitude    : β = -87.44207056697601 [deg]\n",
-      "Obliquity            : ε = 171.65664649001607 [deg]\n",
-      "Spin period          : P = 7.63262 [hours]\n",
-      "Spin rate            : ω = 0.00022866712242903872 [rad/sec]\n",
-      "Vernal equinox lon.  : γ = 154.3323208882217 [deg]\n",
-      "                           (longitude from the periheion direction)\n",
-      "Time                 : t  = 0.0 [sec]\n",
-      "Initial spin phase   : ϕ₀ = 0.0 [deg]\n",
-      "Spin phase           : ϕ  = 0.0 [deg]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spin = Astroshaper.SpinParams(Astroshaper.RYUGU, orbit)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,39 +216,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YORP torque averaged over an orbit cycle"
+    "YORP torque averaged over an orbit cycle. In this setting, a laptop computer takes about an hour to calculate."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3-element MVector{3, Float64} with indices SOneTo(3):\n",
-       "  3.293794071192184\n",
-       " -1.8096012087962008\n",
-       "  0.3083406885385439"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "τ̄ = getNetTorque_shadowing(shape, orbit, spin, times)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MOI = 4.039541372643629e16  # Moment of inertia\n",
+    "τ̄ = net_torque(shape, orbit, spin, times)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MOI = 4.039541372643629e16  # Moment of inertia of Ryugu\n",
     "\n",
     "## Orbitally averaged torque [N ⋅ m]\n",
     "τ̄_ω = Astroshaper.getτω(τ̄, spin)\n",
@@ -369,19 +254,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ω̇ = -3.544108293602548e-6\n",
-      "ωε̇ = 1.6667681590116214e-6\n",
-      "ωψ̇ = 3.973287955614437e-5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "@show ω̇\n",
     "@show ωε̇\n",
@@ -393,17 +268,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See Table 3 in Kanamaru et al. (2021)\n",
+    "See the result of `SHAPE_SFM_49k_v20180804.obj` in Table 3 in Kanamaru et al. (2021). Because of a change of the libarary, it might make a difference of a few percent.\n",
     "\n",
     "(ω̇, ωε̇, ωψ̇) = (-3.531e-6, 1.667e-6, 3.973e-5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -415,15 +283,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.1",
+   "display_name": "Julia 1.6.0",
    "language": "julia",
-   "name": "julia-1.8"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.4"
+   "version": "1.6.4"
   }
  },
  "nbformat": 4,
