--- a/TPM_Didymos/TPM_Didymos.ipynb
+++ b/TPM_Didymos/TPM_Didymos.ipynb
@@ -16,12 +16,14 @@
    "outputs": [],
    "source": [
     "import Astroshaper\n",
-    "# import GLMakie\n",
+    "import GLMakie\n",
     "import JLD2\n",
     "import SPICE\n",
     "import Downloads\n",
     "import Statistics\n",
-    "import Git"
+    "import Git\n",
+    "using LinearAlgebra\n",
+    "import ScatteredInterpolation"
    ]
   },
   {
@@ -190,17 +192,105 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c3f6cb0",
+   "id": "fd414f54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO"
+    "latitude(facet::Astroshaper.Facet) = latitude(facet.center)\n",
+    "latitude(r) = asin(r[3] / norm(r))\n",
+    "\n",
+    "longitude(facet::Astroshaper.Facet) = longitude(facet.center)\n",
+    "longitude(r) = atan(r[2], r[1])\n",
+    "\n",
+    "\"\"\"\n",
+    "    facet_to_grid(shape, data) -> x, y, gridded\n",
+    "\n",
+    "Make a lat-lon grid from facet-correlated data using ScatteredInterpolation.jl\n",
+    "\"\"\"\n",
+    "function facet_to_grid(shape, data)\n",
+    "\n",
+    "    lons = rad2deg.(longitude(facet) for facet in shape.facets)\n",
+    "    lats = rad2deg.(latitude(facet)  for facet in shape.facets)\n",
+    "    points = hcat(lons, lats)'\n",
+    "\n",
+    "    n = 180\n",
+    "    x = range(-180, 180, length=n)\n",
+    "    y = range(-90, 90, length=n)\n",
+    "    X = repeat(x, n)[:]\n",
+    "    Y = repeat(y', n)[:]\n",
+    "    gridPoints = [X Y]'\n",
+    "\n",
+    "    itp = ScatteredInterpolation.interpolate(ScatteredInterpolation.Multiquadratic(), points, data)\n",
+    "    interpolated = ScatteredInterpolation.evaluate(itp, gridPoints)\n",
+    "    gridded = reshape(interpolated, n, n)\n",
+    "\n",
+    "    x, y, gridded\n",
+    "end\n",
+    "\n",
+    "\"\"\"\n",
+    "    temperature_map(shape, temps=surface_temperature(shape))\n",
+    "\n",
+    "Make temperature maps of a binary asteroid, `shape1` and `shape2`.\n",
+    "\"\"\"\n",
+    "function temperature_map(shape1::Astroshaper.ShapeModel, shape2::Astroshaper.ShapeModel;\n",
+    "    temps1=Astroshaper.surface_temperature(shape1), temps2=Astroshaper.surface_temperature(shape2),\n",
+    "    colormap=:hot, colorrange=extrema(vcat(temps1, temps2)),\n",
+    "    draw_contour=true, nlevels=15, ticks=0:20:5000,\n",
+    "    filepath=\"temp_maps.pdf\", titles=(\"\", \"\"),\n",
+    ")\n",
+    "\n",
+    "    T_min, T_max = extrema(vcat(temps1, temps2))\n",
+    "    println(\"Max. temperature: \", T_max)\n",
+    "    println(\"Min. temperature: \", T_min)\n",
+    "\n",
+    "    fig = GLMakie.Figure(resolution=(1400, 600))\n",
+    "\n",
+    "    for (idx_shape, (shape, temps, title)) in enumerate(zip((shape1, shape2), (temps1, temps2), titles))\n",
+    "\n",
+    "        ax = GLMakie.Axis(fig[1, idx_shape],\n",
+    "            title=title,\n",
+    "            xlabel=\"Longitude [deg]\",\n",
+    "            ylabel=\"Latitude [deg]\",\n",
+    "            xticks=-180:30:180,\n",
+    "            yticks=-90:30:90,\n",
+    "        )\n",
+    "        GLMakie.xlims!(ax, -180, 180)\n",
+    "        GLMakie.ylims!(ax, -90, 90)\n",
+    "    \n",
+    "        x, y, gridded = facet_to_grid(shape, temps)\n",
+    "        levels = range(colorrange..., nlevels+1)\n",
+    "        cntrf = GLMakie.contourf!(ax, x, y, gridded; colormap, levels, extendlow=:auto, extendhigh=:auto)\n",
+    "        draw_contour && GLMakie.contour!(x, y, gridded; color=:black, linewidth=0.5, levels)\n",
+    "\n",
+    "        if idx_shape == 2\n",
+    "            GLMakie.Colorbar(fig[2, :], cntrf, ticks=ticks, label=\"Temperature [K]\", vertical=false, flipaxis=false)\n",
+    "        end\n",
+    "    end\n",
+    "\n",
+    "    GLMakie.save(filepath, fig)\n",
+    "    fig\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e136d0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shape1, shape2 = JLD2.load(savepath)[\"shapes\"]\n",
+    "temperature_map(shape1, shape2;\n",
+    "    nlevels=20,\n",
+    "    titles=(\"Didymos\", \"Dimorphos\"),\n",
+    "    filepath=\"temp_maps_final.png\"\n",
+    ")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.0",
+   "display_name": "Julia 1.8.4",
    "language": "julia",
    "name": "julia-1.8"
   },
@@ -208,7 +298,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.0"
+   "version": "1.8.4"
   }
  },
  "nbformat": 4,
