update for long path in spice kernel

--- a/TPM_Ryugu/TPM_Ryugu.ipynb
+++ b/TPM_Ryugu/TPM_Ryugu.ipynb
@@ -49,7 +49,23 @@
     "    path_meta_new = \"hyb2_v03.tm\"\n",
     "    cp(path_meta_old, path_meta_new, force=true)\n",
     "    script = read(path_meta_new, String)\n",
-    "    script = replace(script, \"PATH_VALUES     = ( '..'      )\"=>\"PATH_VALUES     = ('$(abspath(\"spice_kernels\"))')\")\n",
+    "    max_length = 79\n",
+    "    subpaths = String[]\n",
+    "    path_kernel = abspath(\"spice_kernels\")\n",
+    "    i = firstindex(path_kernel)\n",
+    "    for _ in 1:(255 ÷ max_length)\n",
+    "        if i + max_length < lastindex(path_kernel)\n",
+    "            j = prevind(path_kernel, i + max_length)\n",
+    "        else\n",
+    "            j = lastindex(path_kernel)\n",
+    "        end\n",
+    "        push!(subpaths, path_kernel[i:j])\n",
+    "        i = nextind(path_kernel, j)\n",
+    "        if lastindex(path_kernel) < i\n",
+    "            break\n",
+    "        end\n",
+    "    end\n",
+    "    script = replace(script, \"PATH_VALUES     = ( '..'      )\"=>\"PATH_VALUES = ('$(join(subpaths, \"+'\\n'\"))')\")\n",
     "    write(path_meta_new, script)\n",
     "end\n",
     "\n",
