rename Astroshaper.jl to ThermoPhysicalModeling.jl in notebooks

--- a/TPM_Ryugu/TPM_Ryugu.ipynb
+++ b/TPM_Ryugu/TPM_Ryugu.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Astroshaper\n",
+    "import ThermoPhysicalModeling\n",
     "import GLMakie\n",
     "import JLD2\n",
     "import SPICE\n",
@@ -130,9 +130,9 @@
    "source": [
     "path_jld = splitext(path_obj)[1]*\".jld2\"\n",
     "if isfile(path_jld)\n",
-    "    shape = Astroshaper.ShapeModel(path_jld; scale=1000, find_visible_facets=true, save_shape=true)\n",
+    "    shape = ThermoPhysicalModeling.ShapeModel(path_jld; scale=1000, find_visible_facets=true, save_shape=true)\n",
     "else\n",
-    "    shape = Astroshaper.ShapeModel(path_obj; scale=1000, find_visible_facets=true, save_shape=true)\n",
+    "    shape = ThermoPhysicalModeling.ShapeModel(path_obj; scale=1000, find_visible_facets=true, save_shape=true)\n",
     "end"
    ]
   },
@@ -151,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "thermo_params = Astroshaper.ThermoParams(\n",
+    "thermo_params = ThermoPhysicalModeling.ThermoParams(\n",
     "    A_B   = 0.04,  # Bolometric Bond albedo\n",
     "    A_TH  = 0.0,\n",
     "    k     = 0.1,\n",
@@ -176,7 +176,7 @@
    "source": [
     "# Run TPM and save the result\n",
     "savepath = \"TPM_Ryugu.jld2\"\n",
-    "Astroshaper.run_TPM!(shape, et_range, sun_ryugu, thermo_params, savepath, save_range)\n",
+    "ThermoPhysicalModeling.run_TPM!(shape, et_range, sun_ryugu, thermo_params, savepath, save_range)\n",
     "\n",
     "JLD2.jldopen(savepath, \"r+\") do file\n",
     "    file[\"RYUGU_TO_J2000\"] = RYUGU_TO_J2000[save_range]\n",
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "surface_temperature(shape::Astroshaper.ShapeModel) = [facet.temps[begin] for facet in shape.facets]\n",
+    "surface_temperature(shape::ThermoPhysicalModeling.ShapeModel) = [facet.temps[begin] for facet in shape.facets]\n",
     "\n",
     "function VectorVector2Matrix(v)\n",
     "    m = Matrix{eltype(v[end])}(undef, length(v), 3)\n",
@@ -222,7 +222,7 @@
     "    node_data\n",
     "end\n",
     "\n",
-    "function draw(shape::Astroshaper.ShapeModel; data=nothing, r̂☉=[1,0,0.], colormap=:viridis, strokecolor=:gray20, strokewidth=1)\n",
+    "function draw(shape::ThermoPhysicalModeling.ShapeModel; data=nothing, r̂☉=[1,0,0.], colormap=:viridis, strokecolor=:gray20, strokewidth=1)\n",
     "    nodes = VectorVector2Matrix(shape.nodes)\n",
     "    faces = VectorVector2Matrix(shape.faces)\n",
     "\n",
